Removed bloat from theme

--- a/_layouts/simulator.html
+++ b/_layouts/simulator.html
@@ -1,4 +1,11 @@
----
-layout: default
----
-    {{ content }}
+<!DOCTYPE html>
+<html>
+
+    {% include head.html %}
+
+    <body>
+            {{ content }}
+
+        {% include js.html %}
+    </body>
+</html>
