--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,9 @@
 <div id="footerwrap">
     <div class="container">
+    	<div class "row">
+    		<div class="col-lg-12">
+				LightXLab is open-source and al rights are reserved under the <a href = "{{ "LICENSE.md" | prepend: site.baseurl }}">MIT License</a>.  
+    		</div>
+    	</div>
     </div><! --/container -->
 </div><! --/footerwrap -->
