--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
       <ul class="nav navbar-nav">
         <li {% if page.title == "Home" %}class="active"{% endif %}><a href="{{"/" | prepend: site.baseurl }}">HOME</a></li>
         <li {% if page.title == "Simulator" %}class="active"{% endif %}><a href="{{"/simulator/" | prepend: site.baseurl }}">SIMULATOR</a></li>
-        <li {% if page.title == "Tutorials" %}class="active"{% endif %}><a href="{{"/tutorials/" | prepend: site.baseurl }}">TUTORIALS</a></li>  
+        <li {% if page.title == "Getting Started" %}class="active"{% endif %}><a href="{{"/tutorial/" | prepend: site.baseurl }}">GETTING STARTED</a></li>  
         <li {% if page.title == "About" %}class="active"{% endif %}><a href="{{"/about/" | prepend: site.baseurl }}">ABOUT</a></li>
         <li {% if page.title == "Contact" %}class="active"{% endif %}><a href="{{"/contact/" | prepend: site.baseurl }}">CONTACT</a></li>
 
