--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
     	<div class "row">
     		<div class="col-lg-12">
-				LightXLab is open-source and al rights are reserved under the <a href = "{{ "LICENSE.md" | prepend: site.baseurl }}">MIT License</a>.  
+				<p>Copyright 2015 C All rights reserved. <a href="{{"/open source/" | prepend: site.baseurl }}"> </a> </p>
     		</div>
     	</div>
     </div><! --/container -->
