--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,6 +15,7 @@
         <li {% if page.title == "Home" %}class="active"{% endif %}><a href="{{"/" | prepend: site.baseurl }}">HOME</a></li>
         <li {% if page.title == "Simulator" %}class="active"{% endif %}><a href="{{"/simulator/" | prepend: site.baseurl }}">SIMULATOR</a></li>
         <li {% if page.title == "Getting Started" %}class="active"{% endif %}><a href="{{"/tutorial/" | prepend: site.baseurl }}">GETTING STARTED</a></li>  
+           <li {% if page.title == "Open Source" %}class="active"{% endif %}><a href="{{"/open source/" | prepend: site.baseurl }}">OPEN SOURCE</a></li>
         <li {% if page.title == "About" %}class="active"{% endif %}><a href="{{"/about/" | prepend: site.baseurl }}">ABOUT</a></li>
         <li {% if page.title == "Contact" %}class="active"{% endif %}><a href="{{"/contact/" | prepend: site.baseurl }}">CONTACT</a></li>
 
