open source page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
     	<div class "row">
     		<div class="col-lg-12">
-				<p>Copyright 2015 C All rights reserved. <a href="{{"/open source/" | prepend: site.baseurl }}"> </a> </p>
+				<p>Copyright 2015 © All rights reserved. <a href="{{"/open source/" | prepend: site.baseurl }}"> Read More </a> </p>
     		</div>
     	</div>
     </div><! --/container -->
